Add hints. Indent second row of comment

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
     <input type="text" name="q" placeholder="Kirjoitan Native-SQLää">
     <input type="submit" value=">">
   </form>
+  <p class="hint">Konffaan dockeria</p>
+  <p class="hint">Yritän täyttää lounaskorttia</p>
+  <p class="hint">Asennan Oracle-portaalia</p>
 </div>
 
 <div class="footer">
