Disable placeholder text, update hints

--- a/index.html
+++ b/index.html
@@ -23,12 +23,16 @@
 
   <form>
     Mitä sä teet?
-    <input type="text" name="q" placeholder="Kirjoitan Native-SQLää">
+    <input type="text" name="q">
     <input type="submit" value=">">
   </form>
+  <p class="hint">Kirjoitan Native-SQLää</p>
   <p class="hint">Konffaan dockeria</p>
-  <p class="hint">Yritän täyttää lounaskorttia</p>
+  <p class="hint">Yritän ladata lounaskorttia</p>
   <p class="hint">Asennan Oracle-portaalia</p>
+  <p class="hint">Trollaan VMP-kanavalla</p>
+  <p class="hint">Tilaan Soylentia</p>
+  <p class="hint">Luen Twitteristä kohuja</p>
 </div>
 
 <div class="footer">
