Make suggestions hyperlinks so that lazy people can point and click

--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
     <input type="text" name="q">
     <input type="submit" value=">">
   </form>
-  <p class="hint">Kirjoitan Native-SQLää</p>
-  <p class="hint">Konffaan dockeria</p>
-  <p class="hint">Yritän ladata lounaskorttia</p>
-  <p class="hint">Asennan Oracle-portaalia</p>
-  <p class="hint">Trollaan VMP-kanavalla</p>
-  <p class="hint">Tilaan Soylentia</p>
-  <p class="hint">Luen Twitteristä kohuja</p>
+  <a href="?q=Kirjoitan+Native-SQLää" class="hint">Kirjoitan Native-SQLää</a>
+  <a href="?q=Yritän+ladata+lounaskorttia" class="hint">Yritän ladata lounaskorttia</a>
+  <a href="?q=Mongon+aggregaatteja" class="hint">Mongon aggregaatteja</a>
+  <a href="?q=Asennan+Oracle-portaalia" class="hint">Asennan Oracle-portaalia</a>
+  <a href="?q=Trollaan+VMP-kanavalla" class="hint">Trollaan VMP-kanavalla</a>
+  <a href="?q=Tilaan+Soylentia" class="hint">Tilaan Soylentia</a>
+  <a href="?q=Luen+Twitteristä+kohuja" class="hint">Luen Twitteristä kohuja</a>
 </div>
 
 <div class="footer">
