Hide 2nd and 3rd panels on mobile if no query params

--- a/index.html
+++ b/index.html
@@ -21,17 +21,17 @@
 <div class="row">
 
   <div class="col">
-    <div class="pic-frame">
+    <div class="pic-frame" id="panel1">
       <img src="assets/img/p1.png">
       <p id="comment" class="comment"></p>
     </div>
   </div>
-  <div class="col mobile-hide">
+  <div class="col mobile-hide" id="panel2">
     <div class="pic-frame">
       <img src="assets/img/p2.png">
     </div>
   </div>
-  <div class="col mobile-hide">
+  <div class="col mobile-hide" id="panel3">
     <div class="pic-frame">
       <img src="assets/img/p3.png">
     </div>
