Add autofocus to text field

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   
   <form>
     Mitä sä teet?
-    <input type="text" name="q">
+    <input type="text" name="q" autofocus>
     <input type="submit" value=">">
   </form>
   
