Use high-quality JPGs instead of PNGs to slightly decrease filesize without affecting quality

--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
 
   <div class="col">
     <div class="pic-frame" id="panel1">
-      <img src="assets/img/p1.png">
+      <img src="assets/img/p1.jpg">
       <p id="comment" class="comment"></p>
     </div>
   </div>
   <div class="col mobile-hide" id="panel2">
     <div class="pic-frame">
-      <img src="assets/img/p2.png">
+      <img src="assets/img/p2.jpg">
     </div>
   </div>
   <div class="col mobile-hide" id="panel3">
     <div class="pic-frame">
-      <img src="assets/img/p3.png">
+      <img src="assets/img/p3.jpg">
     </div>
   </div>
 
