Add favicon and social media meta tags

--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
   <title>Mitä sä teet?</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Mitä sä teet? -generaattori">
+  <meta name="description" content="Koska viimeksi pysähdyit miettimään, mitä sä teet? Pää läppärin välissä saattaa auttaa oloa.">
+  <meta property="og:locale" content="fi_FI" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Mitä sä teet?" />
+  <meta property="og:site_name" content="Mitä sä teet?" />
+  <meta property="og:description" content="Koska viimeksi pysähdyit miettimään, mitä sä teet? Pää läppärin välissä saattaa auttaa oloa." />
+  <meta property="og:url" content="http://mitasateet.heap.fi" />
+  <meta property="og:image" content="http://mitasateet.heap.fi/assets/img/social_media_preview.jpg" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:description" content="Koska viimeksi pysähdyit miettimään, mitä sä teet? Pää läppärin välissä saattaa auttaa oloa." />
+  <meta name="twitter:title" content="Mitä sä teet?" />
+  <meta name="twitter:image" content="http://mitasateet.heap.fi/assets/img/social_media_preview.jpg" />
+  <meta name="twitter:site" content="@Vilsepi" />
   <meta name="theme-color" content="#ffbc8f" />
+  <link rel="icon" type="image/png" href="assets/img/favicon.png">
   <link rel="stylesheet" href="assets/css/main.css">
   <!-- ga_injection_point -->
 </head>
