Improve form layout on mobile

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 <div class="row">
   
   <form>
-    Mitä sä teet?
-    <input type="text" name="q" autofocus>
+    <label for="textfield">Mitä sä teet?</label>
+    <input type="text" name="q" id="textfield" autofocus>
     <input type="submit" value=">">
   </form>
   
