Disable autofocus as it scrolls to wrong position

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   
   <form>
     <label for="textfield">Mitä sä teet?</label>
-    <input type="text" name="q" id="textfield" autofocus>
+    <input type="text" name="q" id="textfield">
     <input type="submit" value=">">
   </form>
   
